# sqlite-builder

./: .gitignore  CMakeLists.txt  Dockerfile.builder  README.md  Vagrantfile  build.bat  build.sh  build_docker.sh  build_vagrant.sh
